--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -3,5 +3,17 @@
     padding-bottom: 50px;
     margin-top: 100px;
     color: #99979c;
-    text-align: center;
+    text-align: left;
     background-color: #2a2730;}
+
+.bs-docs-footer-links {
+    padding-left: 0;
+    margin-bottom: 20px;
+}
+.bs-docs-footer-links li {
+    display: inline-block;
+    margin: 0 10px 0 0;
+}
+.bs-docs-footer a {
+    color: #fff;
+}
