--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
+<!-- <app-header pageTitle="Home"></app-header> -->
+
 <router-outlet></router-outlet>
+<h1 class="text-center">Welcome to {{title}} !</h1>
 <app-footer></app-footer>
+
