--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a routerLink="/">Home</a></li>
         <li><a routerLink="/aboutUs">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a routerLink="/settings">Settings</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container-fluid -->
